# ripit

./: Cargo.toml  LICENCE  README.md  config-template.yml
src/: app.rs  cli.yml  commits_map.rs  error.rs  main.rs  sync.rs  tag.rs  util.rs
tests/: tests.rs
tests/env/: mod.rs
