[package]
name = "ripit"
version = "0.1.0"
authors = ["vthib <vthiberville@gmail.com>"]
edition = "2018"

[dependencies]
# Rust bindings on libgit2
git2 = "0.9"
# Temp dir creation for tests
tempfile = "3.0"

# Command line options handler
[dependencies.clap]
version = "2.33"
features = ["yaml", "color"]
