[package]
name = "ripit"
version = "0.9.2"
authors = ["vthib <vthiberville@gmail.com>"]
edition = "2018"

[dependencies]
# Rust bindings on libgit2
git2 = "0.11"
# Temp dir creation for tests
tempfile = "3.1"
# Regex support for filtering
regex = "1.3"
# Yaml deserializer for config file
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

# Command line options handler
[dependencies.clap]
version = "2.33"
features = ["yaml", "color"]
